# zArchive

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  acinclude.m4  configure.ac
build-aux/: LicenseHeader.txt
doc/: .gitignore
include/: zArchive.h
lib/: libzArchive.h  libzArchive.sym  libzArchive_archive.c  libzArchive_disk.c  libzArchive_file.c  libzArchive_memory.c  libzArchive_memory.h  libzArchive_misc.c
src/: .gitignore  common.h  zArchive.c
zArchive.xcodeproj/: project.pbxproj
